--- a/helm-charts/node-app-chart/values.yaml
+++ b/helm-charts/node-app-chart/values.yaml
@@ -2,16 +2,27 @@ image:
   repository: test-harbor.lra-poc.com/library/node-app
   tag: latest
 replicaCount: 2
+
 service:
   type: ClusterIP
   port: 3000
+
 ingress:
   enabled: true
+  className: nginx
   hosts:
     - host: test-node-app.lra-poc.com
       paths:
-        - /
+        - path: /
+          pathType: ImplementationSpecific
   tls:
     - hosts:
         - test-node-app.lra-poc.com
       secretName: node-app-tls
+
+vault:
+  enabled: true
+  address: "https://test-vault.lra-poc.com"
+  secretPath: "secret/data/node-app"
+  authMethod: "kubernetes"
+  role: "node-app-role"
