--- a/helm-charts/node-app-chart/templates/service.yaml
+++ b/helm-charts/node-app-chart/templates/service.yaml
@@ -1,15 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "node-app-chart.fullname" . }}
-  labels:
-    {{- include "node-app-chart.labels" . | nindent 4 }}
+  name: {{ .Release.Name }}
 spec:
   type: {{ .Values.service.type }}
+  selector:
+    app: {{ .Release.Name }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
-  selector:
-    {{- include "node-app-chart.selectorLabels" . | nindent 4 }}
+      targetPort: 3000
