--- a/helm-charts/node-app-chart/values.yaml
+++ b/helm-charts/node-app-chart/values.yaml
@@ -30,9 +30,9 @@ autoscaling:
   maxReplicas: 5
   targetCPUUtilizationPercentage: 80
 
-vault:
-  enabled: true
-  address: "https://test-vault.lra-poc.com"
-  secretPath: "secret/data/node-app"
-  authMethod: "kubernetes"
-  role: "node-app-role"
+#vault:
+#  enabled: true
+#  address: "https://test-vault.lra-poc.com"
+#  secretPath: "secret/data/node-app"
+#  authMethod: "kubernetes"
+#  role: "node-app-role"
