--- a/helm-charts/node-app-chart/values.yaml
+++ b/helm-charts/node-app-chart/values.yaml
@@ -1,6 +1,7 @@
 image:
   repository: test-harbor.lra-poc.com/library/node-app
   tag: latest
+
 replicaCount: 2
 
 service:
@@ -18,7 +19,7 @@ ingress:
   tls:
     - hosts:
         - test-node-app.lra-poc.com
-      secretName: node-app-tls
+      secretName: node-app-tls  # Matches the cert-manager secret name
 
 serviceAccount:
   create: true
@@ -29,10 +30,3 @@ autoscaling:
   minReplicas: 1
   maxReplicas: 5
   targetCPUUtilizationPercentage: 80
-
-#vault:
-#  enabled: true
-#  address: "https://test-vault.lra-poc.com"
-#  secretPath: "secret/data/node-app"
-#  authMethod: "kubernetes"
-#  role: "node-app-role"
