--- a/helm-charts/node-app-chart/templates/deployment.yaml
+++ b/helm-charts/node-app-chart/templates/deployment.yaml
@@ -14,14 +14,15 @@ spec:
       labels:
         app: {{ .Release.Name }}
     annotations:
+        {{- if .Values.vault.enabled }}
         vault.hashicorp.com/agent-inject: "true"
         vault.hashicorp.com/role: "{{ .Values.vault.role }}"
-        vault.hashicorp.com/agent-inject-secret-db-config: "{{ .Values.vault.secretPath }}"
-        vault.hashicorp.com/agent-inject-template-db-config: |
-          {{- range $key, $value := .Values.vault.secretKeys }}
-          export {{ $key }}="{{`{{ with secret \"`}}{{ $.Values.vault.secretPath }}{{`\" }}{{ .Data.data.`}}{{$value}}{{`}}`}}"
-          {{- end }}
-      {{- end }}
+        vault.hashicorp.com/agent-inject-secret-config: "{{ .Values.vault.secretPath }}"
+        vault.hashicorp.com/agent-inject-template-config: |
+          {{- `{{- with secret "`}}{{ .Values.vault.secretPath }}{{ `" -}}` }}
+          export DB_USER="{{ `{{ .Data.data.DB_USER }}` }}"
+          export DB_PASSWORD="{{ `{{ .Data.data.DB_PASSWORD }}` }}"
+        {{- end }}
     spec:
       serviceAccountName: {{ .Values.serviceAccount.name }}
       containers:
