--- a/helm-charts/node-app-chart/templates/deployment.yaml
+++ b/helm-charts/node-app-chart/templates/deployment.yaml
@@ -19,9 +19,10 @@ spec:
         vault.hashicorp.com/role: "{{ .Values.vault.role }}"
         vault.hashicorp.com/agent-inject-secret-config: "{{ .Values.vault.secretPath }}"
         vault.hashicorp.com/agent-inject-template-config: |
-          {{- `{{- with secret "`}}{{ .Values.vault.secretPath }}{{ `" -}}` }}
-          export DB_USER="{{ `{{ .Data.data.DB_USER }}` }}"
-          export DB_PASSWORD="{{ `{{ .Data.data.DB_PASSWORD }}` }}"
+          {{`{{- with secret "`}}{{ .Values.vault.secretPath }}{{`" -}}`}}
+          export DB_USER="{{`{{ .Data.data.DB_USER }}`}}"
+          export DB_PASSWORD="{{`{{ .Data.data.DB_PASSWORD }}`}}"
+          {{`{{- end }}`}}
         {{- end }}
     spec:
       serviceAccountName: {{ .Values.serviceAccount.name }}
