--- a/helm-charts/node-app-chart/values.yaml
+++ b/helm-charts/node-app-chart/values.yaml
@@ -30,3 +30,8 @@ autoscaling:
   minReplicas: 1
   maxReplicas: 5
   targetCPUUtilizationPercentage: 80
+
+vault:
+  address: "https://test-vault.lra-poc.com"
+  role: "node-app"
+  secretPath: "secret/data/node-app"
