--- a/helm-charts/node-app-chart/templates/deployment.yaml
+++ b/helm-charts/node-app-chart/templates/deployment.yaml
@@ -19,7 +19,7 @@ spec:
         vault.hashicorp.com/agent-inject-secret-config: "{{ .Values.vault.secretPath }}"
         vault.hashicorp.com/agent-inject-template-config: |
           {{`{{- with secret "`}}{{ .Values.vault.secretPath }}{{`" -}}
-          export DB_USERNAME={{ .Data.data.DB_USERNAME }}
+          export DB_USER={{ .Data.data.DB_USER }}
           export DB_PASSWORD={{ .Data.data.DB_PASSWORD }}
           {{- end }}`}}
     spec:
